tests/cases/bad_inner_attr.stderr
error: `#[mmio(...)]` only supports 'RO', 'RW' and 'inner' options
 --> tests/cases/bad_inner_attr.rs:1:10
  |
1 | #[derive(derive_mmio::Mmio)]
  |          ^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the derive macro `derive_mmio::Mmio` (in Nightly builds, run with -Z macro-backtrace for more info)
